# website

./: .gitignore  .prettierrc  Cargo.toml  README.md
migrations/: 1_project.sql  20240814151611_iteration-one.sql  2_tag.sql  3_blog.sql
src/: config.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs  state.rs  templating.rs  utils.rs
src/frontend/: .prettierignore  .prettierrc  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  vite.config.ts
src/frontend/src/: document.html  error.html  global.css  index.html  main.ts  not-found.html  projects.html  setInitialTheme.ts
src/frontend/src/styles/: global.css  projects.css
src/models/: blog.rs  project.rs  projects.rs  tag.rs
src/routes/: frontend.rs  mod.rs
