[package]
name = "website"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
http = "1.1.0"
minijinja = { version = "2.1.2", features = ["loader"] }
minijinja-autoreload = "2.1.2"
serde = { version = "1.0.205", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.39.2", features = [
    "tokio-macros",
    "net",
    "rt-multi-thread",
    "parking_lot",
] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "fs", "normalize-path"] }
